# career-copilot

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  docker-compose.yml
backend/: langgraph.json  pyproject.toml  settings.py
backend/api/: main.py  routes.py  schemas.py
backend/eval/: dataset.py  judges.py  run_eval.py
backend/graph/: build.py  llm.py  nodes.py  prompts.py  state.py
backend/rag/: embeddings.py  ingest.py  retriever.py  store.py
backend/tests/: test_chunking.py  test_eval.py  test_graph.py  test_health.py
db/init/: 01_extensions.sql
frontend/: README.md  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Results.tsx  ResumeDrop.tsx  RunConsole.tsx
frontend/lib/: api.ts  motion.ts
