[project]
name = "career-copilot-backend"
version = "0.1.0"
description = "Agentic resume-tailoring and gap-analysis backend (LangGraph + RAG + LangSmith)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# Installed in later build steps; kept out of the core install so step 1
# (skeleton + /health) is fast and dependency-light.
rag = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-voyageai>=0.1",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.2",
    "pypdf>=5.0",
]
# Local, free, offline embeddings fallback (pulls torch — heavy). Only needed
# when EMBEDDINGS_PROVIDER=local.
local = [
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "fpdf2>=2.8",                 # generate sample resume PDFs for manual testing
    "langgraph-cli[inmem]>=0.2",  # `langgraph dev` local graph server
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "graph", "rag", "eval"]
